bazel_dep(name = "rules_jvm_external", version = "6.1")
bazel_dep(name = "rules_java", version = "7.6.5")
bazel_dep(name = "rules_bazelrio", version = "0.0.14")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2025-1.bcr1")
bazel_dep(name = "rules_bzlmodrio_jdk", version = "17.0.12-7")
bazel_dep(name = "rules_pmd", version = "7.2.0")
bazel_dep(name = "bzlmodrio-allwpilib", version = "2025.1.1")
bazel_dep(name = "bzlmodrio-studica", version = "2025.1.1-beta-4")
bazel_dep(name = "bzlmodrio-phoenix", version = "5.35.0")
bazel_dep(name = "bzlmodrio-phoenix6", version = "25.1.0")
bazel_dep(name = "bzlmodrio-revlib", version = "2025.0.0")

archive_override(
    module_name = "rules_bzlmodrio_jdk",
    integrity = "sha256-SrikyrF2v2lENdqn9aFC//d0TkIE620lR60yXTrWFTs=",
    strip_prefix = "rules_bzlmodrio_jdk-4ecd4cbc97dfbfe2ceefa627de1228e2f2ca5773",
    urls = ["https://github.com/wpilibsuite/rules_bzlmodRio_jdk/archive/4ecd4cbc97dfbfe2ceefa627de1228e2f2ca5773.tar.gz"],
)
archive_override(
    module_name = "bzlmodrio-studica",
    integrity = "sha256-Uw+1yI3vh/6G20kcjmH+c/tUNTMPgx05cjs3mBd3etY=",
    strip_prefix = "bzlmodRio-studica-b190c1fcfaf6e2fd242e934c5109a1073ff84082",
    urls = ["https://github.com/bzlmodrio/bzlmodRio-studica/archive/b190c1fcfaf6e2fd242e934c5109a1073ff84082.tar.gz"],
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:5.8.2",
        "org.junit.jupiter:junit-jupiter-params:5.8.2",
        "org.junit.jupiter:junit-jupiter-engine:5.8.2",
        "org.junit.platform:junit-platform-commons:1.6.1",
        "org.junit.platform:junit-platform-console:1.6.1",
        "org.junit.platform:junit-platform-engine:1.6.1",
        "org.junit.platform:junit-platform-launcher:1.6.1",
        "org.junit.platform:junit-platform-suite-api:1.6.1",
    ],
    repositories = ["https://repo1.maven.org/maven2"],
)
use_repo(
    maven,
    "maven",
)
