load("//build_scripts:java_rules.bzl", "snobot_sim_java_library")

snobot_sim_java_library(
    name = "snobot_sim_java_test_utils",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//snobot_sim_java/src/main/java/com/revrobotics:simmable_rev",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers/ctre",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers/rev",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
    ],
)
