load("@rules_java//java:defs.bzl", "java_library")
#load("@wpilib//rules:java.bzl", "wpilib_java_library", "wpilib_java_test")

java_library(
    name = "test_robot_base",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@local_allwpilib//:wpilibNewCommands-java",
        "@local_allwpilib//:wpilibj-java",
        "@local_allwpilib//:wpimath-java",
    ],
)
