load("//build_scripts:java_rules.bzl", "snobot_sim_java_library")
#load("@wpilib//rules:java.bzl", "wpilib_java_library", "wpilib_java_test")

snobot_sim_java_library(
    name = "test_robot_base",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@local_allwpilib//:wpilibNewCommands-java",
        "@local_allwpilib//:wpilibj-java",
        "@local_allwpilib//:wpimath-java",
    ],
)
