load("//build_scripts:java_rules.bzl", "snobot_sim_java_robot")

MAIN_CLASS = "org.snobotv2.examples.catchall.Main"

halsim_projects_info = {}

halsim_projects_info["gui"] = ["@local_allwpilib//:halsim_gui"]

halsim_projects_info["ws_server"] = ["@local_allwpilib//:halsim_ws_server"]

snobot_sim_java_robot(
    name = "test_robot_catchall",
    halsim_projects_info = halsim_projects_info,
    main_class = MAIN_CLASS,
    non_wpi_deps = [
        "@local_allwpilib//:wpilibNewCommands-java",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers/rev",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers/navx",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers/ctre",
        "//snobot_sim_java/src/main/java/org/snobotv2/sim_wrappers",
        "//examples/test_robot_base",
        "@local_navx//:navx-java",
        "@local_ctre//:ctre-java",
        "@local_rev//:rev-java",
    ],
    non_wpi_raw_jni_deps = [
        "@local_rev//:jni_deps",
        "@local_ctre//:jni_deps",
    ],
    test_deps = [
        "//snobot_sim_java_test_utils",
        "//snobot_sim_java/src/main/java/org/snobotv2",
    ],
    test_package = "org",
)
