load("//build_scripts:java_rules.bzl", "snobot_sim_java_robot")

MAIN_CLASS = "org.snobotv2.examples.ctre.Main"

halsim_projects_info = {}

halsim_projects_info["gui"] = ["@local_allwpilib//:halsim_gui"]

halsim_projects_info["ws_server"] = ["@local_allwpilib//:halsim_ws_server"]

snobot_sim_java_robot(
    name = "test_robot_ctre",
    halsim_projects_info = halsim_projects_info,
    main_class = MAIN_CLASS,
    non_wpi_deps = [
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers/wpi",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers/ctre",
        "//snobot_sim_java/src/main/java/org/snobotv2/sim_wrappers",
        "@local_allwpilib//:wpimath-java",
        "@local_allwpilib//:wpilibNewCommands-java",
        "@local_ctre//:ctre-java",
        "//examples/test_robot_base",
    ],
    non_wpi_raw_jni_deps = [
        "@local_ctre//:jni_deps",
    ],
    test_deps = [
        "//examples/test_robot_base",
        "//snobot_sim_java_test_utils",
        "@local_allwpilib//:wpimath-java",
    ],
    test_package = "org",
)
