load("//build_scripts:java_rules.bzl", "snobot_sim_java_robot")

MAIN_CLASS = "org.snobotv2.examples.rev.Main"

halsim_projects_info = {}

halsim_projects_info["gui"] = ["@local_allwpilib//:halsim_gui"]

halsim_projects_info["ws_server"] = ["@local_allwpilib//:halsim_ws_server"]

snobot_sim_java_robot(
    name = "test_robot_rev",
    halsim_projects_info = halsim_projects_info,
    main_class = MAIN_CLASS,
    non_wpi_deps = [
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers/wpi",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers/rev",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers/navx",
        "//snobot_sim_java/src/main/java/com/revrobotics:simmable_rev",
        "//snobot_sim_java/src/main/java/org/snobotv2/sim_wrappers",
        "@local_allwpilib//:wpilibNewCommands-java",
        "//examples/test_robot_base",
        "@local_rev//:rev-java",
        "@local_navx//:navx-java",
    ],
    non_wpi_raw_jni_deps = [
        "@local_rev//:jni_deps",
    ],
    test_deps = [
        "//snobot_sim_java_test_utils",
    ],
    test_package = "org",
)
