load("//build_scripts/bazel:java_rules.bzl", "snobot_sim_java_library")

snobot_sim_java_library(
    name = "simmable_rev",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@bazelrio//libraries/java/rev/revlib",
        "@bazelrio//libraries/java/wpilib/hal",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/wpimath",
        "@bazelrio//libraries/java/wpilib/wpiutil",
    ],
)
