load("//build_scripts/bazel:java_rules.bzl", "snobot_sim_java_library")

snobot_sim_java_library(
    name = "snobotv2",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@bazelrio//libraries/java/wpilib/hal",
        "@bazelrio//libraries/java/wpilib/wpilibj",
    ],
)
