load("//build_scripts:java_rules.bzl", "snobot_sim_java_library")

snobot_sim_java_library(
    name = "camera",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@local_allwpilib//:ntcore-java",
        "@local_allwpilib//:wpimath-java",
        "@local_allwpilib//:wpiutil-java",
    ],
)
