load("//build_scripts/bazel:java_rules.bzl", "snobot_sim_java_library")

snobot_sim_java_library(
    name = "coordinate_gui",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@local_allwpilib//:ntcore-java",
        "@local_allwpilib//:wpilibj-java",
        "@local_allwpilib//:wpimath-java",
    ],
)
