load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "sim_wrappers",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//snobot_sim_java/src/main/java/org/snobotv2/interfaces",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers/wpi",
        "@local_allwpilib//:wpilibj-java",
        "@local_allwpilib//:wpimath-java",
    ],
)
