load("//build_scripts/bazel:java_rules.bzl", "snobot_sim_java_library")

snobot_sim_java_library(
    name = "sim_wrappers",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//snobot_sim_java/src/main/java/org/snobotv2/interfaces",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers/wpi",
        "//snobot_swerve_sim/src/main/java/edu/wpi/first/wpilibj/simulation/swerve",
        "@bzlmodrio-allwpilib//libraries/java/hal",
        "@bzlmodrio-allwpilib//libraries/java/wpilibj",
        "@bzlmodrio-allwpilib//libraries/java/wpimath",
    ],
)
