load("//build_scripts:java_rules.bzl", "snobot_sim_java_test")

snobot_sim_java_test(
    name = "test",
    srcs = glob(["*.java"]),
    package = "org",
    visibility = ["//visibility:public"],
    wpi_shared_deps = ["@local_allwpilib//:wpilibj-jni_deps"],
    deps = [
        "//snobot_sim_java/src/main/java/org/snobotv2/camera",
        "@local_allwpilib//:ntcore-java",
        "@local_allwpilib//:wpimath-java",
    ],
)
