load("//build_scripts/bazel:java_rules.bzl", "snobot_sim_java_test")

snobot_sim_java_test(
    name = "test",
    srcs = glob(["*.java"]),
    package = "org",
    visibility = ["//visibility:public"],
    wpi_shared_deps = ["@local_allwpilib//:wpilibj-jni_deps"],
    runtime_deps = [
        "@local_allwpilib//:cameraserver-java",
    ],
    deps = [
        "//examples/test_robot_base/src/main/java/org/snobotv2/examples/base/subsystems",
        "//examples/test_robot_wpi/src/main/java/org/snobotv2/examples/wpi/subsystems",
        "//snobot_sim_java_test_utils/src/main/java/org/snobotv2/test_utils",
        "@local_allwpilib//:ntcore-java",
        "@local_allwpilib//:wpiutil-java",
    ],
)
