load("//build_scripts/bazel:java_rules.bzl", "snobot_sim_java_test")

snobot_sim_java_test(
    name = "test",
    srcs = glob(["*.java"]),
    deps = [
        "//snobot_sim_java/src/main/java/org/snobotv2/camera",
        "@bzlmodrio-allwpilib//libraries/java/ntcore",
        "@bzlmodrio-allwpilib//libraries/java/wpimath",
    ],
)
