load("//build_scripts/bazel:java_rules.bzl", "snobot_sim_java_library")

snobot_sim_java_library(
    name = "infinite_recharge",
    srcs = ["InfiniteRechargeTargets.java"],
    visibility = ["//visibility:public"],
    deps = [
        "//snobot_sim_java/src/main/java/org/snobotv2/camera",
        "@bazelrio//libraries/java/wpilib/wpimath",
    ],
)
