load("//build_scripts:java_rules.bzl", "snobot_sim_java_library")

snobot_sim_java_library(
    name = "ctre",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers",
        "@local_allwpilib//:wpilibj-java",
        "@local_ctre//:ctre-java",
    ],
)
