load("//build_scripts/bazel:java_rules.bzl", "snobot_sim_java_library")

snobot_sim_java_library(
    name = "phoenix5",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers",
        "@bzlmodrio-allwpilib//libraries/java/wpilibj",
        "@bzlmodrio-phoenix//libraries/java/wpiapi-java",
    ],
)
