load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "rev",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//snobot_sim_java/src/main/java/com/revrobotics:simmable_rev",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers",
    ],
)
