load("@wpi_bazel_rules//rules:java.bzl", "wpilib_junit5_test")

wpilib_junit5_test(
    name = "test",
    srcs = glob(["*.java"]),
    package = "org",
    visibility = ["//visibility:public"],
    wpi_shared_deps = ["@local_allwpilib//:wpilibj-jni_deps"],
    deps = [
        "//examples/test_robot_ctre:lib",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers/ctre",
        "//snobot_sim_java_test_utils",
    ],
)
