load("//build_scripts/bazel:java_rules.bzl", "snobot_sim_java_test")

snobot_sim_java_test(
    name = "test",
    srcs = glob(["*.java"]),
    deps = [
        "//examples/test_robot_phoenix5/src/main/java/org/snobotv2/examples/phoenix5/subsystems",
        "//snobot_sim_java/src/main/java/org/snobotv2/interfaces",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers/phoenix5",
        "//snobot_sim_java_test_utils/src/main/java/org/snobotv2/test_utils",
        "@bzlmodrio-phoenix//libraries/java/wpiapi-java",
    ],
)
