load("//build_scripts:java_rules.bzl", "snobot_sim_java_test")

snobot_sim_java_test(
    name = "test",
    srcs = glob(["*.java"]),
    package = "org",
    raw_jni_deps = [
        "@local_rev//:jni_deps",
    ],
    visibility = ["//visibility:public"],
    wpi_shared_deps = ["@local_allwpilib//:wpilibj-jni_deps"],
    deps = [
        "//examples/test_robot_rev:lib",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers/rev",
        "//snobot_sim_java_test_utils",
    ],
)
