load("//build_scripts/bazel:java_rules.bzl", "snobot_sim_java_test")

snobot_sim_java_test(
    name = "test",
    srcs = glob(["*.java"]),
    package = "org",
    raw_jni_deps = [
        "@local_rev//:jni_deps",
        "@local_allwpilib//:wpilibj-jni_deps",
    ],
    visibility = ["//visibility:public"],
    runtime_deps = [
        "@local_allwpilib//:cameraserver-java",
    ],
    deps = [
        "//examples/test_robot_rev/src/main/java/org/snobotv2/examples/rev/subsystems",
        "//snobot_sim_java/src/main/java/com/revrobotics:simmable_rev",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers/rev",
        "//snobot_sim_java_test_utils/src/main/java/org/snobotv2/test_utils",
        "@local_allwpilib//:hal-java",
        "@local_allwpilib//:ntcore-java",
        "@local_allwpilib//:wpiutil-java",
        "@local_rev//:rev-java",
    ],
)
