load("//build_scripts/bazel:java_rules.bzl", "snobot_sim_java_test")

snobot_sim_java_test(
    name = "test",
    srcs = glob(["*.java"]),
    deps = [
        "//examples/test_robot_rev/src/main/java/org/snobotv2/examples/rev",
        "//examples/test_robot_rev/src/main/java/org/snobotv2/examples/rev/subsystems",
        "//snobot_sim_java/src/main/java/com/revrobotics:simmable_rev",
        "//snobot_sim_java/src/main/java/org/snobotv2/module_wrappers/rev",
        "//snobot_sim_java_test_utils/src/main/java/org/snobotv2/test_utils",
        "@bazelrio//libraries/java/rev/revlib",
    ],
)
