load("//build_scripts/bazel:java_rules.bzl", "snobot_sim_java_library")

snobot_sim_java_library(
    name = "infinite_recharge",
    srcs = ["InfiniteRechargeTargets.java"],
    visibility = ["//visibility:public"],
    deps = [
        "//snobot_sim_java_base/src/main/java/org/snobotv2/camera",
        "@bzlmodrio-allwpilib//libraries/java/wpimath",
    ],
)

snobot_sim_java_library(
    name = "rapid_react",
    srcs = ["RapidReactTargets.java"],
    visibility = ["//visibility:public"],
    deps = [
        "//snobot_sim_java_base/src/main/java/org/snobotv2/camera",
        "@bzlmodrio-allwpilib//libraries/java/wpimath",
    ],
)
